# Sutton_RL_Book

./: README.md  pyproject.toml
scripts/chapter1_tic_tac_toe/: tic_tac_toe.py
scripts/chapter2_bandit/: bandit.py
src/rl_book/: __init__.py
